--- a/.travis.yml
+++ b/.travis.yml
@@ -16,10 +16,10 @@ branches:
    - development
 before_script:
   - npm install -g @angular/cli
-  - npm update
 
 script:
-  - ng build --configuration=production --base-href https://patrickklze.github.io/bitcoin-order-app/
+  - ng update @angular/cli
+  - ng build --configuration production --base-href https://patrickklze.github.io/bitcoin-order-app/
 
 deploy:
   provider: pages
