--- a/.travis.yml
+++ b/.travis.yml
@@ -16,9 +16,10 @@ branches:
    - development
 before_script:
   - npm install -g @angular/cli
+  - npm i -g browserslist caniuse-lite --save
 
 script:
-  - ng update @angular/cli
+  - ng update --force @angular/cli
   - ng build --configuration production --base-href https://patrickklze.github.io/bitcoin-order-app/
 
 deploy:
